# lazy-journal

./: .env.example  .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_transcriber.cpp
app/src/main/java/com/lazyjournal/app/: LazyJournalApplication.kt  MainActivity.kt
app/src/main/java/com/lazyjournal/app/core/: AppContainer.kt  Secrets.kt
app/src/main/java/com/lazyjournal/app/data/audio/: AudioPlayer.kt  AudioRecorder.kt
app/src/main/java/com/lazyjournal/app/data/db/: JournalEntryDao.kt  JournalEntryEntity.kt  LazyJournalDatabase.kt
app/src/main/java/com/lazyjournal/app/data/model/: JournalEntry.kt
app/src/main/java/com/lazyjournal/app/data/repository/: JournalRepository.kt
app/src/main/java/com/lazyjournal/app/data/transcription/: TranscriptionService.kt  WhisperCppTranscriber.kt  WhisperModelManager.kt  WhisperTranscriber.kt
app/src/main/java/com/lazyjournal/app/ui/: LazyJournalApp.kt  LocalAppContainer.kt
app/src/main/java/com/lazyjournal/app/ui/detail/: EntryDetailScreen.kt  EntryDetailViewModel.kt
app/src/main/java/com/voicetrail/app/: MainActivity.kt  VoiceTrailApplication.kt
app/src/main/java/com/voicetrail/app/core/: AppContainer.kt  Secrets.kt
app/src/main/java/com/voicetrail/app/ui/: LocalAppContainer.kt  VoiceTrailApp.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  styles.xml
docs/: IMPLEMENTATION_PLAN.md  PR_WORKFLOW.md
gradle/: libs.versions.toml
(+29 files in other folders)
